12/9/09 hook up game timer to clock
12/9/09 add before/after instructions for game
12/9/09 use GradientButtonNode for game buttons (Check, Next, Try Again, Show Answer)
12/9/09 switch between game settings and main scenegraph via "New Game" and "Start!" buttons
12/9/09 add a bunch more stuff to the Game canvas, start implementing Before/After views
12/9/09 replace smile and frown classes with one "face" class that can smile or frown
12/9/09 fix a few inconsistencies between Before and After boxes
12/8/09 refactor value controls and displays to be reusable in Game
12/8/09 use null names for bread/meat/cheese/sandwich, since they are never displayed
12/1/09 add equation to Game canvas, flesh out parts of Game canvas
12/1/09 fix some doc and typos in Real Reaction canvas and model
12/1/09 smiley and frowny faces for Game
11/30/09 visibility state machine, for managing visibility of nodes for the various states of the Game
11/30/09 check in Illustator files for sandwich images, from Noah P.
11/24/09 first pass at scoreboard
11/24/09 scale image files (for first 2 modules) to desired size, change scaling constants in RPALConstants
11/24/09 use same-size images everywhere in Sandwich Shop module, make Before/After images a little bigger
11/23/09 add a stopwatch icon for the timer feature
11/23/09 i18n of all strings in the Game design
11/23/09 remove slider knob image files, since we're no longer using sliders
11/23/09 add "game settings" control panel
11/23/09 move quantity and coefficient ranges into model base class
11/23/09 first pass at game model, very incomplete
# 0.00.14 (36704) Nov 16, 2009
11/16/09 adjust stacked images when their size changes, so that their bottom edges remain vertically aligned
11/16/09 fix: prevent sandwich leftovers from being placed outside bottom of box when sandwich image is large
11/16/09 fix: radio buttons for selecting reaction have white background on Windows
11/16/09 Sandwich Formula -> Sandwich Equation
11/16/09 tweak font sizes